feat(comments): remove single-level reply restriction in backend, build comment tree recursively for N-level nesting, update reply-to-reply test and add multi-level tree test